Fix something I don't know what so the cabal file updates

--- a/package.yaml
+++ b/package.yaml
@@ -2,9 +2,9 @@ name:                ci-snake
 version:             0.1.0.0
 github:              "githubuser/ci-snake"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2023 Author name here"
+author:              "Bjorn Tipling"
+maintainer:          "bjorn@ambientchill.com"
+copyright:           "2023 Bjorn Tipling"
 
 extra-source-files:
 - README.md
@@ -21,6 +21,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- brick
 
 ghc-options:
 - -Wall
